--- a/index.html
+++ b/index.html
@@ -12,15 +12,37 @@
 <body>
     <header class="header_container">
       <img class="header_image" src="./sources/logo.svg" alt="logo_bluedot">
-      <nav class="header_navbar_container">
+      <nav class="header_navbar_container_desktop">
           <ul class="header_navbar_list">
               <li> <a href="#episodios">EPISODIOS</a></li>
               <li><a href="#nosotros">NOSOTROS</a></li>
               <li><a href="#entrevistas">ENTREVISTAS</a></li>
               <li><a href="#topicos">TÓPICOS</a></li>
-            
           </ul>
       </nav>
+
+
+      <nav class="menumobile">
+        <div class="icon-menu">
+          <img src="./sources/logo.svg" alt="logo_bluedot">
+          <div class="input-label">
+            <input type="checkbox" id="burger-button">
+            <label for="burger-button">
+                <div class="linea linea-top"></div>
+                <div class="linea linea-middle"></div>
+                <div class="linea linea-low"></div>
+            </label>
+            <ul>
+              <li><a class="menu-button" href="#episodes">EPISODIOS</a></li>
+              <li><a class="menu-button" href="#us">NOSOTROS</a></li>
+              <li><a class="menu-button" href="#interview">ENTREVISTAS</a></li>
+              <li><a class="menu-button" href="#topics">TOPICOS</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+
     </header>
     <main>
         <section>
