--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 
       <nav class="menumobile">
         <div class="icon-menu">
-          <img src="./sources/logo.svg" alt="logo_bluedot">
+          <img class="header_image_mobile" src="./sources/logo.svg" alt="logo_bluedot">
           <div class="input-label">
             <input type="checkbox" id="burger-button">
             <label for="burger-button">
-                <div class="linea linea-top"></div>
-                <div class="linea linea-middle"></div>
-                <div class="linea linea-low"></div>
+                <div class="line line-top"></div>
+                <div class="line line-middle"></div>
+                <div class="line line-low"></div>
             </label>
             <ul>
-              <li><a class="menu-button" href="#episodes">EPISODIOS</a></li>
-              <li><a class="menu-button" href="#us">NOSOTROS</a></li>
-              <li><a class="menu-button" href="#interview">ENTREVISTAS</a></li>
-              <li><a class="menu-button" href="#topics">TOPICOS</a></li>
+              <li><a class="menu-button" href="#episodios">EPISODIOS</a></li>
+              <li><a class="menu-button" href="#nosotros">NOSOTROS</a></li>
+              <li><a class="menu-button" href="#entrevistas">ENTREVISTAS</a></li>
+              <li><a class="menu-button" href="#topicos">TOPICOS</a></li>
             </ul>
           </div>
         </div>
